fix(naming): follow Operator SDK convention - no -controller suffix in image names
Root Cause:
- Confused Dockerfile naming (which CAN have suffix) with image naming (which should NOT)
- Production deploy/ manifests use images WITHOUT -controller suffix
- Operator SDK convention: Dockerfile name can have suffix, but image name should not

Evidence from Production Deploys:
  ✅ quay.io/jordigilh/data-storage (not data-storage-controller)
  ✅ quay.io/jordigilh/kubernaut-gateway (not kubernaut-gateway-controller)
  ✅ quay.io/jordigilh/kubernaut-authwebhook (not kubernaut-authwebhook-controller)

Kubernetes/Operator SDK Naming Convention:
  - Dockerfile: Can have -controller suffix for clarity (e.g., manager-controller.Dockerfile)
  - Image Name: Just the service name (e.g., myoperator:v1.0)
  - ServiceAccount: Often has -controller for RBAC role clarity
  - Binary: Usually "manager" in Operator SDK, or service name in custom projects

Examples from Kubernetes Ecosystem:
  - cert-manager → image: quay.io/jetstack/cert-manager
  - ingress-nginx → image: registry.k8s.io/ingress-nginx/controller (exception)
  - prometheus-operator → image: quay.io/prometheus-operator/prometheus-operator

This Project's Convention:
  Dockerfile: {service}-controller.Dockerfile (file organization)
  Image: {service}:tag (registry naming)
  ServiceAccount: {service}-controller (RBAC role clarity)
  Binary: {service} (cmd/ directory structure)

Changes:
1. .github/workflows/ci-pipeline.yml:
   - Reverted image_name back to NO -controller suffix
   - notification-controller → notification
   - signalprocessing-controller → signalprocessing
   - workflowexecution-controller → workflowexecution
   - remediationorchestrator-controller → remediationorchestrator

2. test/infrastructure/*_e2e*.go:
   - Updated ServiceName to match (no -controller suffix)
   - signalprocessing_e2e_hybrid.go
   - workflowexecution_e2e_hybrid.go
   - notification_e2e.go
   - remediationorchestrator_e2e_hybrid.go

Expecte

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -259,16 +259,16 @@ jobs:
             image_name: authwebhook
           - service: notification
             dockerfile: docker/notification-controller-ubi9.Dockerfile
-            image_name: notification-controller  # Match Dockerfile naming convention
+            image_name: notification  # Operator SDK convention: image name without -controller suffix
           - service: remediationorchestrator
             dockerfile: docker/remediationorchestrator-controller.Dockerfile
-            image_name: remediationorchestrator-controller  # Match Dockerfile naming convention
+            image_name: remediationorchestrator  # Operator SDK convention: image name without -controller suffix
           - service: signalprocessing
             dockerfile: docker/signalprocessing-controller.Dockerfile
-            image_name: signalprocessing-controller  # Match Dockerfile naming convention
+            image_name: signalprocessing  # Operator SDK convention: image name without -controller suffix
           - service: workflowexecution
             dockerfile: docker/workflowexecution-controller.Dockerfile
-            image_name: workflowexecution-controller  # Match Dockerfile naming convention
+            image_name: workflowexecution  # Operator SDK convention: image name without -controller suffix
           # Python Services (1)
           - service: holmesgpt-api
             dockerfile: holmesgpt-api/Dockerfile
