fix(e2e): add DataStorage client RBAC for HAPI + install tkn CLI
Root Cause Analysis:

1. HAPI 401 Unauthorized (31/35 tests failed):
   - ServiceAccount created ✅
   - BUT: No RoleBinding to grant DataStorage access ❌
   - DataStorage middleware flow:
     a) Validates token via TokenReview ✅
     b) Checks permissions via SubjectAccessReview (SAR) ❌ FAILED HERE
     c) Without RoleBinding → SAR returns "no permission" → 401 Unauthorized

2. WorkflowExecution E2E failure:
   - Test infrastructure tries to build Tekton bundles using tkn CLI
   - tkn not installed in CI runner
   - Error: "exec: 'tkn': executable file not found in $PATH"

Errors:
  HAPI: "Missing Authorization header with ***" (401 Unauthorized)
  WE: "tkn CLI not found - install from https://tekton.dev/docs/cli/"

Analysis - Why ServiceAccount Alone Isn't Enough:
  Step 1: HAPI sends request with Bearer token
    Authorization: Bearer <ServiceAccount-token> ✅

  Step 2: DataStorage middleware validates token
    TokenReview API → Valid ✅

  Step 3: DataStorage middleware checks RBAC
    SubjectAccessReview API:
      "Can holmesgpt-api-sa access data-storage-service?"
      WITHOUT RoleBinding → NO ❌
      Result: 401 Unauthorized

  Step 4 (after fix): Middleware authorizes request
    SubjectAccessReview API:
      "Can holmesgpt-api-sa access data-storage-service?"
      WITH RoleBinding → YES ✅
      Result: Request proceeds to handler

Fix:
1. test/infrastructure/holmesgpt_api.go:
   - Added ClusterRole: data-storage-client (same as production)
   - Added RoleBinding: holmesgpt-api-data-storage-client
   - Grants HAPI ServiceAccount full CRUD permissions on DataStorage service
   - Matches production pattern from deploy/data-storage/client-rbac-v2.yaml

2. .github/workflows/ci-pipeline.yml:
   - Added "Install Tekton CLI (tkn)" step
   - Downloads tkn v0.39.0 from GitHub releases
   - Installs to /usr/local/bin/tkn
   - Required by WorkflowExecution E2E for bundle creation

RBAC Pattern (DD-AUT

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -542,6 +542,16 @@ jobs:
           chmod +x ./kind
           sudo mv ./kind /usr/local/bin/kind
           kind version
+      - name: Install Tekton CLI (tkn)
+        run: |
+          # Install tkn CLI (required by WorkflowExecution E2E tests for bundle creation)
+          # Authority: test/infrastructure/tekton_bundles.go
+          TKN_VERSION="0.39.0"
+          curl -LO "https://github.com/tektoncd/cli/releases/download/v${TKN_VERSION}/tkn_${TKN_VERSION}_Linux_x86_64.tar.gz"
+          tar xzf "tkn_${TKN_VERSION}_Linux_x86_64.tar.gz" tkn
+          chmod +x tkn
+          sudo mv tkn /usr/local/bin/tkn
+          tkn version
       - name: Setup Python (for holmesgpt-api E2E)
         if: matrix.service == 'holmesgpt-api'
         uses: actions/setup-python@v5
