fix(e2e): upgrade tkn CLI + enable HAPI ServiceAccount authentication
Fixes 2/3 E2E failures (WE + HAPI):

1. WorkflowExecution E2E Fix:
   Root Cause: tkn v0.39.0 doesn't support --override flag
   Fix: Upgrade to tkn v0.40.0
   Error: "Error: unknown flag: --override"

   .github/workflows/ci-pipeline.yml:
     TKN_VERSION="0.39.0" → TKN_VERSION="0.40.0"

   Impact: WE E2E tests can now build Tekton bundles successfully

2. HolmesGPT-API E2E Fix:
   Root Cause: ServiceAccountAuthPoolManager not enabled in E2E deployment
   Fix: Add environment variables to enable ServiceAccount auth
   Error: 401 Unauthorized (31/35 tests failed)

   test/infrastructure/holmesgpt_api.go:
     Added env vars:
       USE_SERVICE_ACCOUNT_AUTH: "true"
       KUBERNETES_SERVICE_ACCOUNT_TOKEN_PATH: "/var/run/secrets/kubernetes.io/serviceaccount/token"

   Flow:
     1. ServiceAccount holmesgpt-api-sa ✅ (created in 9ddb311f7)
     2. RoleBinding for DataStorage access ✅ (created in 9ddb311f7)
     3. ServiceAccountAuthPoolManager enabled ✅ (THIS FIX)
     4. Bearer token injected in DataStorage requests ✅ (expected after fix)

   Impact: HAPI E2E tests can now authenticate with DataStorage

Remaining Issue:
- Notification E2E: Pod readiness timeout (requires must-gather investigation)

Authority:
- DD-AUTH-014: ServiceAccount-based authentication for stateless services
- Tekton CLI: --override flag introduced in v0.40.0

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -546,7 +546,8 @@ jobs:
         run: |
           # Install tkn CLI (required by WorkflowExecution E2E tests for bundle creation)
           # Authority: test/infrastructure/tekton_bundles.go
-          TKN_VERSION="0.39.0"
+          # v0.40.0+ required for --override flag support
+          TKN_VERSION="0.40.0"
           curl -LO "https://github.com/tektoncd/cli/releases/download/v${TKN_VERSION}/tkn_${TKN_VERSION}_Linux_x86_64.tar.gz"
           tar xzf "tkn_${TKN_VERSION}_Linux_x86_64.tar.gz" tkn
           chmod +x tkn
