fix(e2e): increase Notification readiness probe timeout for DataStorage dependency
Root Cause:
- Notification depends on DataStorage (ADR-032 audit integration)
- CI environment: DataStorage takes ~30s to initialize
- Notification readiness probe: 30s initial + 3 retries × 10s = 60s total
- Pod times out before DataStorage connection succeeds

Evidence:
- Local (macOS): Pod becomes ready ✅ (DataStorage faster)
- CI (Linux): Pod timeout after 60s ❌
- AuthWebhook (same DataStorage dependency): Uses failureThreshold: 6, passes ✅

Comparison:
  Notification (BEFORE):
    initialDelaySeconds: 30
    failureThreshold: 3
    Total wait: 60s → TIMEOUT in CI

  AuthWebhook (WORKING):
    initialDelaySeconds: 15
    failureThreshold: 6
    Total wait: 75s → PASS in CI
    Comment: "Allow time for DataStorage client init (30s timeout) + manager startup"

Fix:
test/e2e/notification/manifests/notification-deployment.yaml:
  failureThreshold: 3 → 6
  Total wait: 60s → 90s (30 + 10×6)

Expected Behavior:
- CI: Notification pod has 90s to connect to DataStorage (same pattern as AuthWebhook)
- Pod becomes ready after DataStorage initialization completes
- All 30 E2E tests run successfully

Authority:
- ADR-032: Data Storage audit integration (Notification depends on DataStorage)
- AuthWebhook E2E deployment (proven working pattern for DataStorage clients)

Impact:
- Notification E2E tests will pass in CI
- Local tests unaffected (already passing)
- No change to production deployments (E2E-specific)

--- a/test/e2e/notification/manifests/notification-deployment.yaml
+++ b/test/e2e/notification/manifests/notification-deployment.yaml
@@ -75,7 +75,7 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
-          failureThreshold: 3
+          failureThreshold: 6  # Increased: Allow time for DataStorage client init (30s timeout) + manager startup, same as AuthWebhook
         resources:
           limits:
             cpu: 500m
