feat(green): Implement RecordApprovalDecision for RAR audit (Cycle 1)
Phase 1 - GREEN: Implemented RecordApprovalDecision() method to make tests pass.
All 4 unit tests now PASSING (2 fixed, 2 already passing).

Implementation:
- RecordApprovalDecision() captures approval decisions in audit events
  - Idempotency: Only emits if decision is non-empty
  - Payload: Complete approval context (WHO, WHEN, WHAT, WHY)
  - Actor: Authenticated user from webhook (SOC 2 CC8.1)
  - Correlation ID: Parent RR name (DD-AUDIT-CORRELATION-002)
  - Fire-and-forget: Logs error but doesn't fail reconciliation

- mapDecisionToPayloadEnum() helper
  - Maps CRD ApprovalDecision to ogen enum
  - Handles: approved, rejected, expired

- Added "approval" to event_category enum (OpenAPI)
  - Regenerated ogen client with AuditEventRequestEventCategoryApproval

Test Results (GREEN Phase):
✅ 4/4 PASSED:
  - UT-RO-AUD006-001: Approval decision event ✅
  - UT-RO-AUD006-002: Rejection decision event ✅
  - UT-RO-AUD006-004: Idempotency check ✅
  - UT-RO-AUD006-008: Fire-and-forget ✅

Pattern:
- Follows pkg/aianalysis/audit/ pattern
- Uses ogen-generated types (RemediationApprovalDecisionPayload)
- Minimal implementation to pass tests (GREEN principle)

Next: REFACTOR phase - Clean up code, add comments, extract patterns

Related: BR-AUDIT-006, DD-AUDIT-006, TEST_PLAN_BR_AUDIT_006

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -1568,9 +1568,9 @@ components:
           type: string
           minLength: 1
           maxLength: 50
-          enum: [gateway, notification, analysis, aiagent, signalprocessing, workflow, workflowexecution, orchestration, webhook]
+          enum: [gateway, notification, analysis, aiagent, signalprocessing, workflow, workflowexecution, orchestration, webhook, approval]
           description: |
-            Service-level event category (ADR-034 v1.6).
+            Service-level event category (ADR-034 v1.7).
             Per ADR-034 v1.2: event_category MUST match the service name that emits the event.
             Values:
             - gateway: Gateway Service
@@ -1580,6 +1580,7 @@ components:
             - signalprocessing: Signal Processing Service
             - workflow: Workflow Catalog Service
             - workflowexecution: WorkflowExecution Controller (ADR-034 v1.5)
+            - approval: RemediationApprovalRequest Controller (BR-AUDIT-006)
             - orchestration: Remediation Orchestrator Service
             - webhook: Authentication Webhook Service (SOC2 CC8.1 operator attribution)
           example: gateway
