fix(e2e): Correct RO E2E port allocation to avoid HAPI conflict
**Root Cause**: Port 8089 was allocated to both RO and HAPI E2E tests,
causing port collision when HAPI cluster runs simultaneously.

**Changes**:
- RO → DataStorage: Changed from port 8089 to 8090
- Updated `test/infrastructure/kind-remediationorchestrator-config.yaml`
- Updated `docs/architecture/decisions/DD-TEST-001-port-allocation-strategy.md`

**Port Allocation (per DD-TEST-001)**:
- 8089: HAPI → DataStorage (established allocation)
- 8090: RO → DataStorage (new allocation - previously reserved/buffer)
- 8091: AIAnalysis → DataStorage
- 8092: WorkflowExecution → DataStorage

**Impact**: Fixes "node(s) already exist for cluster ro-e2e" error
when HAPI E2E tests are running.

DD-TEST-001

--- a/test/infrastructure/kind-remediationorchestrator-config.yaml
+++ b/test/infrastructure/kind-remediationorchestrator-config.yaml
@@ -30,7 +30,7 @@ nodes:
   extraPortMappings:
   # DataStorage API Port (for audit event queries in E2E tests)
   - containerPort: 30081  # DataStorage NodePort in cluster
-    hostPort: 8089        # DD-TEST-001: RO → DataStorage dependency (avoids conflicts with WE:8092, DS:8081)
+    hostPort: 8090        # DD-TEST-001: RO → DataStorage dependency (8089=HAPI, 8091=AIAnalysis, 8092=WE)
     protocol: TCP
   # API Port (if needed in future)
   - containerPort: 30083
